Fix remaining JDK 8 test compilation errors
- OffsetTime.toEpochSecond(LocalDate) (Java 9+) → OffsetDateTime.of(...).toEpochSecond()
- Path.of() (Java 11+) → Paths.get()
- List.of() in MetadataResultSetBuilderTest, DatabricksThriftServiceClientTest → Arrays.asList()
- Map.of() in TelemetryClientTest → Collections.singletonMap()

Signed-off-by: samikshya-chand_data <samikshya.chand@databricks.com>